Package name modified according the location for the temp class